# cleanplate

./: .gitignore  Cargo.toml  README.md  getting_started.md
examples/: extract.rs
scripts/: dump-templates.py
src/: lib.rs  main.rs
